--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "scripts": {
     "demo3": "./node_modules/.bin/babel-node ./examples/completionSuggest/index.js",
     "watch": "jest --watch",
+    "watch-seq": "jest -i --watch",
     "coverage": "jest --coverage",
     "lint": "eslint --ext .js ./src",
     "flow": "./node_modules/.bin/flow",
